--- a/index.html
+++ b/index.html
@@ -5,41 +5,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simulado do Maluco</title>
+    <title>Simulado do Peixe</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="reset.css">
 
 </head>
-
 <body>
-    <div class="principal">
-        <header class="caixa1">
-            <h1>Simulado</h1>
-            <p>FrontEnd SENAI</p>
-        </header>
-
-        <section>   
-            <div class="a01">
-                <h1>01</h1>
-            </div>
-
-            <div class="h2">
-                <h2>02</h2>
-            </div>
-
-            <div class="h3">
-                <h3>03</h3>
-            </div>
-
-            <div class="h4">
-                <h4>04</h4>
-            </div>
-
-            <div class="baixo">
-                <h5>05</h5>
-            </div>
-
-        </section>
-    </div>
+    <main class="principal">
+        <div class="cxesquerda">
+            <h1 class="titulo">Simulado</h1>
+            <p>FrontEnd Do Leo</p>
+        </div>
+        <div class="cxdireita">
+         <p>sla</p>
+        </div>
+    </main>
 </body>
 
 </html>
