--- a/index.html
+++ b/index.html
@@ -17,7 +17,20 @@
             <p>FrontEnd Do Leo</p>
         </div>
         <div class="cxdireita">
-         <p>sla</p>
+          <div class="cima">
+             <div class="cx01">
+                <h1 class="titulo">01</h1>
+             </div>
+             <div class="cx02">
+                <h1 class="titulo">02</h1>
+             </div>
+          </div>
+          <div class="meiuca">
+
+          </div>
+          <div class="baixo">
+
+          </div>
         </div>
     </main>
 </body>
