--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div class="cxesquerda">
             <h1 class="titulo">Simulado</h1>
             <p>FrontEnd Do Leo</p>
-        </div>
-        <div class="cxdireita">
+         </div>
+         <div class="cxdireita">
           <div class="cima">
              <div class="cx01">
                 <h1 class="titulo">01</h1>
@@ -26,10 +26,16 @@
              </div>
           </div>
           <div class="meiuca">
-
+            <div class="cx03">
+                <h1 class="titulo">03</h1>
+            </div>
+            <div class="cx04">
+                <h1 class="titulo">04</h1>
+            </div>
           </div>
           <div class="baixo">
-
+            <div class="cx05">
+                <h1 class="titulo">05</h1>
           </div>
         </div>
     </main>
